@@ -65,12 +65,12 @@ fast_keep = 5
 
 //Error pages
 error_mime = "text/html;charset=UTF-8"
-error400 = "/var/www/error/400.html"
-error403 = "/var/www/error/403.html"
-error404 = "/var/www/error/404.html"
-error500 = "/var/www/error/500.html" 
-error501 = "/var/www/error/501.html"
-error505 = "/var/www/error/505.html"
+error400 = "./var/www/error/400.html"
+error403 = "./var/www/error/403.html"
+error404 = "./var/www/error/404.html"
+error500 = "./var/www/error/500.html" 
+error501 = "./var/www/error/501.html"
+error505 = "./var/www/error/505.html"
 
 [Native page execution]
 //Number of theards executing requests
@@ -84,11 +84,26 @@ exec_heap = 2097152
 global_pexec_mutex=1
 
 [Debugging]
-//Show compilator output(1/0)
+/* Show compilator output(1/0) */
 cmpout = 0
 
-//Instant std out(disables stdout buffor)(1/0)
+/* Instant stdout(1/0) */
 instantso = 0
+
+/* Log incoming requests(1/0)(debug build only) */
+log_requests = 0
+
+/* Log HTTP responses(1/0)(debug build only) */
+log_httprep = 0
+
+/* Log sender data(1/0)(debug build only) */
+log_sender = 0
+
+/* make '\r' and '\n' visible(1/0)(debug build only) */
+log_newline_visible = 0
+
+/* Write more data when page is executing(1/0)(debug build only) */
+extended_native_memory_stats = 0
 
 [NHP compilation]
 /* cpp compiller command, default g++ */
